--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,10 @@ dependencies:
   uuid: ^3.0.7
   intl: ^0.17.0
   intl_phone_number_input: ^0.7.2
+  google_maps_flutter: ^2.2.5
+  http: ^0.13.5
+  geolocator: ^9.0.2
+  geocoding: ^2.1.0
 
 dev_dependencies:
   flutter_test:
