Adding Forgot password screen

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   http: ^0.13.5
   geolocator: ^9.0.2
   geocoding: ^2.1.0
+  flutter_geocoder: ^0.2.2-nullsafety
 
 dev_dependencies:
   flutter_test:
