--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -103,10 +103,15 @@ flutter:
     - family:  SF-Pro-Display-Light
       fonts:
         - asset: assets/fonts/SF-Pro-Display-Light.otf
-
     - family:  SF-Pro-Display-Medium
       fonts:
         - asset: assets/fonts/SF-Pro-Display-Medium.otf
+    - family:  DancingScript-Regular
+      fonts:
+        - asset: assets/fonts/DancingScript-Regular.ttf
+    - family:  BebasNeue-Regular
+      fonts:
+        - asset: assets/fonts/BebasNeue-Regular.ttf
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
