--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   geolocator: ^9.0.2
   geocoding: ^2.1.0
   flutter_geocoder: ^0.2.2-nullsafety
+  geoflutterfire2: ^2.3.15
 
 dev_dependencies:
   flutter_test:
