--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   flutter_geocoder: ^0.2.2-nullsafety
   geoflutterfire2: ^2.3.15
   shared_preferences: ^2.0.20
+  flutter_image_compress: ^1.1.3
 
 dev_dependencies:
   flutter_test:
