--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
     <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
    <application
+        android:requestLegacyExternalStorage="true"
         android:label="King Barber"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
