--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,8 @@ dependencies:
   geoflutterfire2: ^2.3.15
   shared_preferences: ^2.0.20
   flutter_image_compress: ^1.1.3
+  cross_file_image: ^1.0.0
+  get: ^4.6.5
 
 dev_dependencies:
   flutter_test:
