--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,10 @@ dependencies:
   flutter_geocoder: ^0.2.2-nullsafety
   geoflutterfire2: ^2.3.15
   shared_preferences: ^2.0.20
+  day_night_time_picker: ^1.2.0+2
+  firebase_messaging: ^14.2.6
+  flutter_local_notifications: ^13.0.0
+  app_settings: ^4.2.0
 
 dev_dependencies:
   flutter_test:
