--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,7 @@ dependencies:
   firebase_messaging: ^14.2.6
   flutter_local_notifications: ^13.0.0
   app_settings: ^4.2.0
+  booking_calendar: ^1.1.9
 
 dev_dependencies:
   flutter_test:
