--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
     <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
    <application
         android:requestLegacyExternalStorage="true"
-        android:label="King Barber"
+        android:label="The Parlour App"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <meta-data android:name="com.google.android.geo.API_KEY" android:value="AIzaSyBEHLsPAwfrJ6Snn9ar4Ad7zCE1PxG_DfM"/>
