--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,8 @@ dependencies:
   flutter_local_notifications: ^13.0.0
   app_settings: ^4.2.0
   booking_calendar: ^1.1.9
+  flutter_rating_bar: ^4.0.1
+  another_flushbar: ^1.12.29
 
 dev_dependencies:
   flutter_test:
